# reviewboard

./: .babelrc  .browserslistrc  .eslintrc.yaml  .gitignore  .mailmap  .reviewboardrc  AUTHORS  CONTRIBUTING  COPYING  INSTALL  MANIFEST.in  Makefile  Makefile.am  NEWS  README  README.md  README.rst  __init__.py  autogen.sh  babel.config.json  build-backend.py  configure.ac  conftest.py  dev-requirements.txt  devserver.sh  doc-requirements.txt  eslint.config.mjs  generator.py  lighttpd.conf  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  rollup.config.js  rollup.config.mjs  server.sh  settings.py  settings.py.tmpl  settings_local.py.tmpl  (+7 more)
admin/: Makefile.am  cache_stats.py  checks.py  context_processors.py  forms.py  middleware.py  migration.py  siteconfig.py  tests.py  urls.py  views.py
admin/management/: __init__.py  evolutions.py  sites.py
contrib/: Makefile.am
contrib/conf/: apache-fastcgi.conf.in  apache-modpython.conf  apache-modpython.conf.in  apache-site  lighttpd.conf  lighttpd.conf.in  reviewboard.fcgi.in  search-cron.conf.in  settings_local.py.tmpl
contrib/db/: backup-db.py  db2wiki.py  load-db.py
contrib/docker/: Dockerfile  build.py
contrib/docker/examples/: README.md  docker-compose.mysql.yaml  docker-compose.postgres.yaml
contrib/docker/examples/nginx_templates/: default.conf.template  reviewboard.conf.template
contrib/docker/examples/postgres/: init-reviewboard-db.sh
contrib/docker/scripts/: docker-entrypoint.sh  serve.sh
contrib/internal/: build-confusables.py  build-i18n.py  build-media.py  build-npm-deps.py  devserver.py  devserver.sh  prepare-dev.py  pyflakes.exclude  release.py  run-pyflakes.py  sandbox  test-upgrade.py  webapi-lint.py  webtests.sh
contrib/internal/conf/: settings_local.py
contrib/internal/treesitter/: recompute-test-data.py  update-language-info.py  update-queries.py
contrib/perforce/: post-review
contrib/profiling/: gather_profile_stats.py  print_info.py
contrib/tools/: P4Tool.txt  README.P4Tool  generate_extension.py  post-commit  post-review  rb-site  svn-hook-postcommit-review  svn-hook-set-submitted  tests.py
diffviewer/: Makefile.am  diffutils.py  forms.py  models.py  myersdiff.py  parser.py  smdiff.py  tests.py  views.py
diffviewer/evolutions/: __init__.py  add_parent_diffs.py
diffviewer/templatetags/: difftags.py
diffviewer/testdata/diffs/context/: README  (+3 more)
diffviewer/testdata/new_src/: README.nonewline  foo.c
diffviewer/testdata/orig_src/: README  foo.c
htdocs/: Makefile.am
htdocs/css/: common.css  dashboard.css  datagrid.css  diffviewer.css  ie_hacks.css  iphone.css  iui.css  reviews.css  search.css  site.css  syntax.css  yui-ui.css
htdocs/errordocs/: 500.html
htdocs/media/yui-ext/: yui-ext-core.js  yui-ext.js
htdocs/scripts/: comments.js  dashboard.js  diffviewer.js  iui.js  pngfix.htc  reviews.js  screenshots.js
htdocs/scripts/rb/: common.js  core.js  dialogs.js  widgets.js
reviews/: Makefile.am  admin.py  datagrids.py  db.py  decorators.py  email.py  errors.py  feeds.py  forms.py  json.py  managers.py  models.py  tests.py  urls.py  views.py
reviews/evolutions/: __init__.py  change_descriptions.py  last_review_timestamp.py
reviews/fixtures/: email_test.json  test_reviewrequests.json
reviews/management/commands/: fixscreenshots.py  index.py
reviews/sql/: reviewrequest.sql
reviews/templatetags/: emailtags.py  reviewtags.py
reviews/urls/: json.py  reviews.py
scmtools/: Makefile.am  __init__.py  admin.py  bzr.py  clearcase.py  core.py  cvs.py  fooversion.py  forms.py  git.py  hg.py  localfile.py  models.py  mtn.py  perforce.py  perforce_vmware.py  svn.py  tests.py
scmtools/evolutions/: __init__.py  bugzilla_url_charfield.py  repository_raw_file_url.py
scmtools/fixtures/: git.json  hg.json  initial_data.json  sample_tools.json  test_scmtools.json  vmware.json
scmtools/testdata/: git_delfile.diff  git_filemode2.diff  git_newfile.diff  git_simple.diff  hg_repo.bundle  svn_makefile.diff  vmware-changeset.txt  vmware-phil-is-crazy.txt  vmware-single-line-desc.txt  vmware.changeset
templates/: Makefile.am  base.html  base_feeds.html  column_header.html  errorbox.html  frontpage.html  paginator.html
templates/accounts/: login.html  prefs.html  register.html
templates/admin/: base_site.html  dashboard.html  database.html  feed.html  general_settings.html  index.html  manual_updates_required.html  settings.html
templates/admin/manual-updates/: run-syncdb.html
templates/admin/scmtools/: change_form.html
templates/datagrid/: paginator.html
templates/diffviewer/: changeindex.html  changeindex_entry.html  comments_dlg.html  diff_file_fragment.html  diff_fragment_error.html  sidebyside_diffline.html  upload.html  view_diff.html
templates/feeds/: reviews_description.html
templates/iphone/: base.html  dashboard.html  diff.html  diff_files.html  group_list.html  login.html  review_request_detail.html  review_request_list.html  submitter_list.html  user_prefs.html
templates/notifications/: email_base.html  review_email.html  review_request_email.txt
templates/reports/: report_list.html  review-moinmoin.txt  review-text.txt  review_request-moinmoin.txt  status_report-moinmoin.txt  status_report-text.txt
templates/reviews/: comment.html  comments_dlg.html  dashboard.html  dashboard_entry.html  datagrid.html  diff_comment_fragment.html  diff_update.txt  group_list.html  inline_reply_comments.html  line_comments.html  new.html  new_review_request.html  reply_email.txt  review_detail.html  review_draft_inline_form.html  review_email.txt  review_flags.html  review_flags.js  review_header.html  review_list.html  review_list_base.html  review_reply.html  review_reply_section.html  review_request_actions_primary.html  review_request_actions_secondary.html  review_request_box.html  review_request_dlgs.html  review_request_email.html  review_request_email.txt  review_request_listview.html  reviewable_base.html  screenshot_detail.html  screenshotindex.html  search.html  star.html  submitter_list.html  trophy_box.html  upload_screenshot.html
(+4095 files in other folders)
