[build-system]
requires = [
    'buildthings~=1.0',
]
build-backend = 'buildthings.backend'

[project]
name = 'ReviewBoard'
description = 'Extensible code review and document review built for Git, Perforce, Mercurial, and more'
authors = [
    {name = 'Beanbag, Inc.', email = 'questions@beanbaginc.com'},
]
license = { text = 'MIT' }
readme = 'README.rst'
dynamic = ['dependencies', 'version']
requires-python = '>=3.8'

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 4.2',
    'Framework :: Review Board',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development',
    'Topic :: Software Development :: Quality Assurance',
]


[project.urls]
Homepage = 'https://www.reviewboard.org'
Documentation = 'https://www.reviewboard.org/docs/'
ChangeLog = 'https://www.reviewboard.org/docs/releasenotes/reviewboard/'
Repository = 'https://github.com/reviewboard/reviewboard'
Support = 'https://www.reviewboard.org/support/'
Hosting = 'https://rbcommons.com/'


[project.scripts]
rb-site = 'reviewboard.cmdline.rbsite:main'
rbext = 'reviewboard.cmdline.rbext:main'
rbssh = 'reviewboard.cmdline.rbssh:main'


[project.optional-dependencies]
elasticsearch1 = ['elasticsearch~=1.0']
elasticsearch2 = ['elasticsearch~=2.0']
elasticsearch5 = ['elasticsearch~=5.0']
elasticsearch7 = ['elasticsearch~=7.0']
extension-packaging = ['setuptools>=74']
ldap = ['python-ldap>=3.3.1']
mercurial = ['mercurial']
mysql = ['mysqlclient>=1.4,<=2.1.999']
p4 = ['p4python']
postgres = ['psycopg2-binary']
s3 = ['django-storages[s3]']
saml = ['python3-saml']
subvertpy = ['subvertpy']
swift = ['django-storage-swift']


[tool.setuptools.package-data]
reviewboard = ['py.typed']


[tool.setuptools.packages.find]
where = ['.']
include = ['reviewboard*']
namespaces = false


[tool.setuptools.dynamic]
version = { attr = 'reviewboard.__version__' }


[tool.buildthings]
dependencies = { attr = 'reviewboard.dependencies.build_dependency_list' }
dynamic = ['exclude-deps']


[tool.buildthings.isolation]
# Support .local-packages across all build types for in-development
# deployments.
local-packages-path = '.local-packages'

# We currently require using Review Board and Djblets as part of the build
# process, so install those dependencies. We don't need developer deps.
include-install-deps = true


# Editable build information.
[tool.buildthings.editable]
exclude-deps = { attr = 'reviewboard.dependencies.build_editable_exclude_deps' }


[tool.buildthings.editable.npm]
install = true
python-modules = ['djblets']


# Source distribution build steps.
#
# For source distributions, we'll build static media files and i18n files.
#
# Djblets is included as an npm workspace. NPM modules will be installed
# in order to build the static media.
[tool.buildthings.sdist.npm]
install = true
python-modules = ['djblets']


[[tool.buildthings.sdist.extra-build-steps]]
label = "Building static media..."
command = "{python} ./contrib/internal/build-media.py"


[[tool.buildthings.sdist.extra-build-steps]]
label = "Building i18n..."
command = "{python} ./contrib/internal/build-i18n.py"


# Wheel distribution build steps.
#
# For wheel distributions, we'll build static media files and i18n files.
#
# Djblets is included as an npm workspace. NPM modules will be installed
# in order to build the static media.
#
# In the future, we'll want to disable these in order to build from a
# source distribution, which will aid third-parties in consuming our source
# builds.
[tool.buildthings.wheel.npm]
install = true
python-modules = ['djblets']


[[tool.buildthings.wheel.extra-build-steps]]
label = "Building static media..."
command = "{python} ./contrib/internal/build-media.py"


[[tool.buildthings.wheel.extra-build-steps]]
label = "Building i18n..."
command = "{python} ./contrib/internal/build-i18n.py"
