rbdir = $(pyexecdir)/reviewboard/admin
nobase_rb_PYTHON = \
	__init__.py \
	cache_stats.py \
	checks.py \
	forms.py \
	middleware.py \
	siteconfig.py \
	tests.py \
	urls.py \
	views.py \
	management/__init__.py \
	management/evolutions.py \
	management/sites.py \

nobase_rb_DATA = \
	fixtures/initial_evolution_schema.json

EXTRA_DIST = $(nobase_rb_DATA)

