rbdir = $(pyexecdir)/reviewboard/htdocs
nobase_rb_DATA = \
	css/common.css \
	css/dashboard.css \
	css/datagrid.css \
	css/diffviewer.css \
	css/ie_hacks.css \
	css/iphone.css \
	css/iui.css \
	css/reviews.css \
	css/search.css \
	css/syntax.css \
	css/yui-ui.css \
	errordocs/500.html \
	images/blank.gif \
	images/box_bottom_bg.png \
	images/box_bottom_bg_trans.png \
	images/box_top_bg.png \
	images/box_top_bg_trans.png \
	images/button_bg.png \
	images/collapse.png \
	images/comment-draft.png \
	images/comment-ghost.png \
	images/comment.png \
	images/convo.png \
	images/delete.png \
	images/delete.svg \
	images/diff.png \
	images/djblets/datagrid/checkmark.png \
	images/djblets/datagrid/header_bg.png \
	images/djblets/datagrid/header_bg_primary.png \
	images/djblets/datagrid/sort_asc_primary.png \
	images/djblets/datagrid/sort_asc_secondary.png \
	images/djblets/datagrid/sort_desc_primary.png \
	images/djblets/datagrid/sort_desc_secondary.png \
	images/djblets/datagrid/unsort.png \
	images/dlg-spinner.gif \
	images/edit.png \
	images/expand.png \
	images/favicon.png \
	images/fish-trophy.png \
	images/gold_box_bottom_bg.png \
	images/gold_box_top_bg.png \
	images/important.png \
	images/iphone/backButton.png \
	images/iphone/blueButton.png \
	images/iphone/cancel.png \
	images/iphone/grayButton.png \
	images/iphone/listArrow.png \
	images/iphone/listArrowSel.png \
	images/iphone/listGroup.png \
	images/iphone/loading.gif \
	images/iphone/pinstripes.png \
	images/iphone/selection.png \
	images/iphone/thumb.png \
	images/iphone/toggle.png \
	images/iphone/toggleOn.png \
	images/iphone/toolButton.png \
	images/iphone/toolbar.png \
	images/iphone/whiteButton.png \
	images/review_box_bottom_bg.png \
	images/review_box_top_bg.png \
	images/review_request_box_bottom_bg.png \
	images/review_request_box_top_bg.png \
	images/reviewrequest.png \
	images/shipit.png \
	images/star_off.png \
	images/star_on.png \
	images/title_box_top_bg.png \
	images/trophy.png \
	images/ui/basic-dialog/btn-sprite.gif \
	images/ui/basic-dialog/close.gif \
	images/ui/basic-dialog/e-handle.gif \
	images/ui/basic-dialog/gray/close.gif \
	images/ui/basic-dialog/gray/dlg-bg.gif \
	images/ui/basic-dialog/gray/e-handle.gif \
	images/ui/basic-dialog/gray/hd-sprite.gif \
	images/ui/basic-dialog/gray/s-handle.gif \
	images/ui/basic-dialog/gray/se-handle.gif \
	images/ui/basic-dialog/hd-sprite.gif \
	images/ui/basic-dialog/s-handle.gif \
	images/ui/basic-dialog/se-handle.gif \
	images/ui/gradient-bg.gif \
	images/ui/layout/collapse.gif \
	images/ui/layout/expand.gif \
	images/ui/layout/gradient-bg.gif \
	images/ui/layout/gray/collapse.gif \
	images/ui/layout/gray/expand.gif \
	images/ui/layout/gray/gradient-bg.gif \
	images/ui/layout/gray/ns-collapse.gif \
	images/ui/layout/gray/ns-expand.gif \
	images/ui/layout/gray/panel-close.gif \
	images/ui/layout/gray/panel-title-bg.gif \
	images/ui/layout/gray/panel-title-light-bg.gif \
	images/ui/layout/gray/tab-close-on.gif \
	images/ui/layout/gray/tab-close.gif \
	images/ui/layout/ns-collapse.gif \
	images/ui/layout/ns-expand.gif \
	images/ui/layout/panel-close.gif \
	images/ui/layout/panel-title-bg.gif \
	images/ui/layout/panel-title-light-bg.gif \
	images/ui/layout/tab-close-on.gif \
	images/ui/layout/tab-close.gif \
	images/ui/s.gif \
	images/ui/sizer/e-handle-dark.gif \
	images/ui/sizer/e-handle.gif \
	images/ui/sizer/gray/e-handle-dark.gif \
	images/ui/sizer/gray/e-handle.gif \
	images/ui/sizer/gray/ne-handle-dark.gif \
	images/ui/sizer/gray/ne-handle.gif \
	images/ui/sizer/gray/nw-handle-dark.gif \
	images/ui/sizer/gray/nw-handle.gif \
	images/ui/sizer/gray/s-handle-dark.gif \
	images/ui/sizer/gray/s-handle.gif \
	images/ui/sizer/gray/se-handle-dark.gif \
	images/ui/sizer/gray/se-handle.gif \
	images/ui/sizer/gray/sw-handle-dark.gif \
	images/ui/sizer/gray/sw-handle.gif \
	images/ui/sizer/ne-handle-dark.gif \
	images/ui/sizer/ne-handle.gif \
	images/ui/sizer/nw-handle-dark.gif \
	images/ui/sizer/nw-handle.gif \
	images/ui/sizer/s-handle-dark.gif \
	images/ui/sizer/s-handle.gif \
	images/ui/sizer/se-handle-dark.gif \
	images/ui/sizer/se-handle.gif \
	images/ui/sizer/square.gif \
	images/ui/sizer/sw-handle-dark.gif \
	images/ui/sizer/sw-handle.gif \
	images/ui/tabs/gray/tab-btm-inactive-left-bg.gif \
	images/ui/tabs/gray/tab-btm-inactive-right-bg.gif \
	images/ui/tabs/gray/tab-btm-left-bg.gif \
	images/ui/tabs/gray/tab-btm-right-bg.gif \
	images/ui/tabs/gray/tab-sprite.gif \
	images/ui/tabs/tab-btm-inactive-left-bg.gif \
	images/ui/tabs/tab-btm-inactive-right-bg.gif \
	images/ui/tabs/tab-btm-left-bg.gif \
	images/ui/tabs/tab-btm-right-bg.gif \
	images/ui/tabs/tab-sprite.gif \
	images/ui/toolbar/btn-over-bg.gif \
	images/ui/toolbar/gray-bg.gif \
	images/upload.png \
	scripts/comments.js \
	scripts/csshover2.htc \
	scripts/diffviewer.js \
	scripts/djblets \
	scripts/djblets/datagrid.js \
	scripts/iui.js \
	scripts/pngfix.htc \
	scripts/rb/common.js \
	scripts/rb/dialogs.js \
	scripts/rb/widgets.js \
	scripts/reviews.js \
	scripts/screenshots.js \
	scripts/yui/animation/animation-min.js \
	scripts/yui/autocomplete/autocomplete-min.js \
	scripts/yui/button/assets/background.png \
	scripts/yui/button/assets/button.css \
	scripts/yui/button/assets/menuarrow.gif \
	scripts/yui/button/assets/splitarrow.gif \
	scripts/yui/button/assets/splitarrow_active.gif \
	scripts/yui/button/button-beta-min.js \
	scripts/yui/calendar/assets/calendar.css \
	scripts/yui/calendar/assets/callt.gif \
	scripts/yui/calendar/assets/calrt.gif \
	scripts/yui/calendar/assets/calx.gif \
	scripts/yui/calendar/calendar-min.js \
	scripts/yui/connection/connection-min.js \
	scripts/yui/container/assets/alrt16_1.gif \
	scripts/yui/container/assets/blck16_1.gif \
	scripts/yui/container/assets/close12_1.gif \
	scripts/yui/container/assets/container.css \
	scripts/yui/container/assets/hlp16_1.gif \
	scripts/yui/container/assets/info16_1.gif \
	scripts/yui/container/assets/tip16_1.gif \
	scripts/yui/container/assets/warn16_1.gif \
	scripts/yui/container/container-min.js \
	scripts/yui/container/container_core-min.js \
	scripts/yui/datasource/datasource-beta-min.js \
	scripts/yui/datatable/assets/datatable.css \
	scripts/yui/datatable/datatable-beta-min.js \
	scripts/yui/dom/dom-min.js \
	scripts/yui/dragdrop/dragdrop-min.js \
	scripts/yui/element/element-beta-min.js \
	scripts/yui/event/event-min.js \
	scripts/yui/fonts/fonts-min.css \
	scripts/yui/grids/grids-min.css \
	scripts/yui/history/assets/blank.html \
	scripts/yui/history/history-experimental-min.js \
	scripts/yui/logger/assets/logger.css \
	scripts/yui/logger/logger-min.js \
	scripts/yui/menu/assets/map.gif \
	scripts/yui/menu/assets/menu.css \
	scripts/yui/menu/assets/menuarodwn8_dim_1.gif \
	scripts/yui/menu/assets/menuarodwn8_hov_1.gif \
	scripts/yui/menu/assets/menuarodwn8_nrm_1.gif \
	scripts/yui/menu/assets/menuarorght8_dim_1.gif \
	scripts/yui/menu/assets/menuarorght8_hov_1.gif \
	scripts/yui/menu/assets/menuarorght8_nrm_1.gif \
	scripts/yui/menu/assets/menuaroup8_dim_1.gif \
	scripts/yui/menu/assets/menuaroup8_nrm_1.gif \
	scripts/yui/menu/assets/menuchk8_dim_1.gif \
	scripts/yui/menu/assets/menuchk8_hov_1.gif \
	scripts/yui/menu/assets/menuchk8_nrm_1.gif \
	scripts/yui/menu/menu-min.js \
	scripts/yui/reset/reset-min.css \
	scripts/yui/reset-fonts-grids \
	scripts/yui/reset-fonts-grids/reset-fonts-grids.css \
	scripts/yui/slider/slider-min.js \
	scripts/yui/tabview/assets/border_tabs.css \
	scripts/yui/tabview/assets/tabview.css \
	scripts/yui/tabview/tabview-min.js \
	scripts/yui/treeview/assets/lm.gif \
	scripts/yui/treeview/assets/lmh.gif \
	scripts/yui/treeview/assets/ln.gif \
	scripts/yui/treeview/assets/loading.gif \
	scripts/yui/treeview/assets/lp.gif \
	scripts/yui/treeview/assets/lph.gif \
	scripts/yui/treeview/assets/tm.gif \
	scripts/yui/treeview/assets/tmh.gif \
	scripts/yui/treeview/assets/tn.gif \
	scripts/yui/treeview/assets/tp.gif \
	scripts/yui/treeview/assets/tph.gif \
	scripts/yui/treeview/assets/tree.css \
	scripts/yui/treeview/assets/vline.gif \
	scripts/yui/treeview/treeview-min.js \
	scripts/yui/utilities/utilities.js \
	scripts/yui/yahoo/yahoo-min.js \
	scripts/yui/yahoo-dom-event \
	scripts/yui/yahoo-dom-event/yahoo-dom-event.js \
	scripts/yui-ext/yui-ext-core.js \
	scripts/yui-ext/yui-ext.js

install-data-local:
	mkdir -p -m 1777 ${DESTDIR}${rbdir}/images/uploaded

EXTRA_DIST = $(nobase_rb_DATA)
