rbdir = $(pyexecdir)/reviewboard/htdocs
nobase_rb_DATA = \
	media/rb/css/admin.css \
	media/rb/css/dashboard.css \
	media/rb/css/datagrid.css \
	media/rb/css/reviews.css \
	media/rb/css/syntax.css \
	media/rb/css/yui-ui.css \
	media/rb/css/iphone.css \
	media/rb/css/ie_hacks.css \
	media/rb/css/search.css \
	media/rb/css/common.css \
	media/rb/css/iui.css \
	media/rb/css/diffviewer.css \
	media/rb/scripts/rb/common.js \
	media/rb/scripts/rb/widgets.js \
	media/rb/scripts/rb/dialogs.js \
	media/rb/scripts/pngfix.htc \
	media/rb/scripts/screenshots.js \
	media/rb/scripts/csshover2.htc \
	media/rb/scripts/iui.js \
	media/rb/scripts/diffviewer.js \
	media/rb/scripts/comments.js \
	media/rb/scripts/reviews.js \
	media/rb/images/ui/tabs/gray/tab-sprite.gif \
	media/rb/images/ui/tabs/gray/tab-btm-left-bg.gif \
	media/rb/images/ui/tabs/gray/tab-btm-inactive-right-bg.gif \
	media/rb/images/ui/tabs/gray/tab-btm-inactive-left-bg.gif \
	media/rb/images/ui/tabs/gray/tab-btm-right-bg.gif \
	media/rb/images/ui/tabs/tab-sprite.gif \
	media/rb/images/ui/tabs/tab-btm-left-bg.gif \
	media/rb/images/ui/tabs/tab-btm-inactive-right-bg.gif \
	media/rb/images/ui/tabs/tab-btm-inactive-left-bg.gif \
	media/rb/images/ui/tabs/tab-btm-right-bg.gif \
	media/rb/images/ui/s.gif \
	media/rb/images/ui/sizer/gray/nw-handle-dark.gif \
	media/rb/images/ui/sizer/gray/se-handle-dark.gif \
	media/rb/images/ui/sizer/gray/ne-handle.gif \
	media/rb/images/ui/sizer/gray/se-handle.gif \
	media/rb/images/ui/sizer/gray/ne-handle-dark.gif \
	media/rb/images/ui/sizer/gray/e-handle.gif \
	media/rb/images/ui/sizer/gray/s-handle.gif \
	media/rb/images/ui/sizer/gray/sw-handle-dark.gif \
	media/rb/images/ui/sizer/gray/e-handle-dark.gif \
	media/rb/images/ui/sizer/gray/nw-handle.gif \
	media/rb/images/ui/sizer/gray/sw-handle.gif \
	media/rb/images/ui/sizer/gray/s-handle-dark.gif \
	media/rb/images/ui/sizer/nw-handle-dark.gif \
	media/rb/images/ui/sizer/se-handle-dark.gif \
	media/rb/images/ui/sizer/ne-handle.gif \
	media/rb/images/ui/sizer/square.gif \
	media/rb/images/ui/sizer/se-handle.gif \
	media/rb/images/ui/sizer/ne-handle-dark.gif \
	media/rb/images/ui/sizer/e-handle.gif \
	media/rb/images/ui/sizer/s-handle.gif \
	media/rb/images/ui/sizer/sw-handle-dark.gif \
	media/rb/images/ui/sizer/e-handle-dark.gif \
	media/rb/images/ui/sizer/nw-handle.gif \
	media/rb/images/ui/sizer/sw-handle.gif \
	media/rb/images/ui/sizer/s-handle-dark.gif \
	media/rb/images/ui/toolbar/btn-over-bg.gif \
	media/rb/images/ui/toolbar/gray-bg.gif \
	media/rb/images/ui/layout/gray/tab-close.gif \
	media/rb/images/ui/layout/gray/panel-title-light-bg.gif \
	media/rb/images/ui/layout/gray/tab-close-on.gif \
	media/rb/images/ui/layout/gray/ns-expand.gif \
	media/rb/images/ui/layout/gray/ns-collapse.gif \
	media/rb/images/ui/layout/gray/collapse.gif \
	media/rb/images/ui/layout/gray/panel-close.gif \
	media/rb/images/ui/layout/gray/expand.gif \
	media/rb/images/ui/layout/gray/panel-title-bg.gif \
	media/rb/images/ui/layout/gray/gradient-bg.gif \
	media/rb/images/ui/layout/tab-close.gif \
	media/rb/images/ui/layout/panel-title-light-bg.gif \
	media/rb/images/ui/layout/tab-close-on.gif \
	media/rb/images/ui/layout/ns-expand.gif \
	media/rb/images/ui/layout/ns-collapse.gif \
	media/rb/images/ui/layout/collapse.gif \
	media/rb/images/ui/layout/panel-close.gif \
	media/rb/images/ui/layout/expand.gif \
	media/rb/images/ui/layout/panel-title-bg.gif \
	media/rb/images/ui/layout/gradient-bg.gif \
	media/rb/images/ui/basic-dialog/gray/dlg-bg.gif \
	media/rb/images/ui/basic-dialog/gray/se-handle.gif \
	media/rb/images/ui/basic-dialog/gray/hd-sprite.gif \
	media/rb/images/ui/basic-dialog/gray/e-handle.gif \
	media/rb/images/ui/basic-dialog/gray/s-handle.gif \
	media/rb/images/ui/basic-dialog/gray/close.gif \
	media/rb/images/ui/basic-dialog/se-handle.gif \
	media/rb/images/ui/basic-dialog/hd-sprite.gif \
	media/rb/images/ui/basic-dialog/e-handle.gif \
	media/rb/images/ui/basic-dialog/s-handle.gif \
	media/rb/images/ui/basic-dialog/close.gif \
	media/rb/images/ui/basic-dialog/btn-sprite.gif \
	media/rb/images/ui/gradient-bg.gif \
	media/rb/images/review_box_bottom_bg.png \
	media/rb/images/edit.png \
	media/rb/images/box_top_bg_trans.png \
	media/rb/images/favicon.png \
	media/rb/images/blank.gif \
	media/rb/images/diff.png \
	media/rb/images/star_on.png \
	media/rb/images/comment-ghost.png \
	media/rb/images/title_box_top_bg.png \
	media/rb/images/gold_box_top_bg.png \
	media/rb/images/button_bg.png \
	media/rb/images/box_bottom_bg_trans.png \
	media/rb/images/fish-trophy.png \
	media/rb/images/comment-draft.png \
	media/rb/images/comment-draft-small.png \
	media/rb/images/important.png \
	media/rb/images/convo.png \
	media/rb/images/box_top_bg.png \
	media/rb/images/iphone/whiteButton.png \
	media/rb/images/iphone/toolButton.png \
	media/rb/images/iphone/toolbar.png \
	media/rb/images/iphone/pinstripes.png \
	media/rb/images/iphone/grayButton.png \
	media/rb/images/iphone/blueButton.png \
	media/rb/images/iphone/selection.png \
	media/rb/images/iphone/listArrowSel.png \
	media/rb/images/iphone/backButton.png \
	media/rb/images/iphone/listArrow.png \
	media/rb/images/iphone/listGroup.png \
	media/rb/images/iphone/toggleOn.png \
	media/rb/images/iphone/toggle.png \
	media/rb/images/iphone/loading.gif \
	media/rb/images/iphone/thumb.png \
	media/rb/images/iphone/cancel.png \
	media/rb/images/review_request_box_top_bg.png \
	media/rb/images/trophy.png \
	media/rb/images/box_bottom_bg.png \
	media/rb/images/upload.png \
	media/rb/images/star_off.png \
	media/rb/images/dlg-spinner.gif \
	media/rb/images/collapse.png \
	media/rb/images/expand.png \
	media/rb/images/comment.png \
	media/rb/images/comment-small.png \
	media/rb/images/delete.png \
	media/rb/images/delete.svg \
	media/rb/images/gold_box_bottom_bg.png \
	media/rb/images/review_request_box_bottom_bg.png \
	media/rb/images/review_box_top_bg.png \
	media/rb/images/reviewrequest.png \
	media/rb/images/rss.png \
	media/rb/images/shipit.png \
	media/yui/dom/dom-min.js \
	media/yui/menu/assets/menuaroup8_nrm_1.gif \
	media/yui/menu/assets/menu.css \
	media/yui/menu/assets/menuarorght8_nrm_1.gif \
	media/yui/menu/assets/menuarorght8_hov_1.gif \
	media/yui/menu/assets/map.gif \
	media/yui/menu/assets/menuarodwn8_dim_1.gif \
	media/yui/menu/assets/menuchk8_dim_1.gif \
	media/yui/menu/assets/menuaroup8_dim_1.gif \
	media/yui/menu/assets/menuarodwn8_nrm_1.gif \
	media/yui/menu/assets/menuarodwn8_hov_1.gif \
	media/yui/menu/assets/menuchk8_nrm_1.gif \
	media/yui/menu/assets/menuchk8_hov_1.gif \
	media/yui/menu/assets/menuarorght8_dim_1.gif \
	media/yui/menu/menu-min.js \
	media/yui/treeview/treeview-min.js \
	media/yui/treeview/assets/tree.css \
	media/yui/treeview/assets/lmh.gif \
	media/yui/treeview/assets/lph.gif \
	media/yui/treeview/assets/tmh.gif \
	media/yui/treeview/assets/tph.gif \
	media/yui/treeview/assets/lm.gif \
	media/yui/treeview/assets/ln.gif \
	media/yui/treeview/assets/lp.gif \
	media/yui/treeview/assets/tm.gif \
	media/yui/treeview/assets/tn.gif \
	media/yui/treeview/assets/tp.gif \
	media/yui/treeview/assets/vline.gif \
	media/yui/treeview/assets/loading.gif \
	media/yui/event/event-min.js \
	media/yui/fonts/fonts-min.css \
	media/yui/grids/grids-min.css \
	media/yui/reset/reset-min.css \
	media/yui/yahoo/yahoo-min.js \
	media/yui/yahoo-dom-event/yahoo-dom-event.js \
	media/yui/datatable/datatable-beta-min.js \
	media/yui/datatable/assets/datatable.css \
	media/yui/element/element-beta-min.js \
	media/yui/tabview/assets/tabview.css \
	media/yui/tabview/assets/border_tabs.css \
	media/yui/tabview/tabview-min.js \
	media/yui/dragdrop/dragdrop-min.js \
	media/yui/container/assets/warn16_1.gif \
	media/yui/container/assets/info16_1.gif \
	media/yui/container/assets/tip16_1.gif \
	media/yui/container/assets/hlp16_1.gif \
	media/yui/container/assets/close12_1.gif \
	media/yui/container/assets/container.css \
	media/yui/container/assets/alrt16_1.gif \
	media/yui/container/assets/blck16_1.gif \
	media/yui/container/container-min.js \
	media/yui/container/container_core-min.js \
	media/yui/calendar/assets/calendar.css \
	media/yui/calendar/assets/calx.gif \
	media/yui/calendar/assets/callt.gif \
	media/yui/calendar/assets/calrt.gif \
	media/yui/calendar/calendar-min.js \
	media/yui/button/button-beta-min.js \
	media/yui/button/assets/background.png \
	media/yui/button/assets/splitarrow_active.gif \
	media/yui/button/assets/menuarrow.gif \
	media/yui/button/assets/button.css \
	media/yui/button/assets/splitarrow.gif \
	media/yui/autocomplete/autocomplete-min.js \
	media/yui/connection/connection-min.js \
	media/yui/logger/assets/logger.css \
	media/yui/logger/logger-min.js \
	media/yui/slider/slider-min.js \
	media/yui/history/history-experimental-min.js \
	media/yui/history/assets/blank.html \
	media/yui/datasource/datasource-beta-min.js \
	media/yui/animation/animation-min.js \
	media/yui/reset-fonts-grids/reset-fonts-grids.css \
	media/yui/utilities/utilities.js \
	media/djblets/js/datagrid.js \
	media/djblets/images/datagrid/checkmark.png \
	media/djblets/images/datagrid/sort_asc_primary.png \
	media/djblets/images/datagrid/header_bg.png \
	media/djblets/images/datagrid/header_bg_primary.png \
	media/djblets/images/datagrid/sort_desc_primary.png \
	media/djblets/images/datagrid/sort_asc_secondary.png \
	media/djblets/images/datagrid/unsort.png \
	media/djblets/images/datagrid/sort_desc_secondary.png \
	media/admin/js/core.js \
	media/admin/js/calendar.js \
	media/admin/js/admin/DateTimeShortcuts.js \
	media/admin/js/admin/CollapsedFieldsets.js \
	media/admin/js/admin/ordering.js \
	media/admin/js/admin/RelatedObjectLookups.js \
	media/admin/js/urlify.js \
	media/admin/js/SelectBox.js \
	media/admin/js/dateparse.js \
	media/admin/js/SelectFilter2.js \
	media/admin/js/SelectFilter.js \
	media/admin/js/timeparse.js \
	media/admin/js/getElementsBySelector.js \
	media/admin/css/dashboard.css \
	media/admin/css/patch-iewin.css \
	media/admin/css/widgets.css \
	media/admin/css/rtl.css \
	media/admin/css/login.css \
	media/admin/css/changelists.css \
	media/admin/css/forms.css \
	media/admin/css/global.css \
	media/admin/css/layout.css \
	media/admin/css/null.css \
	media/admin/css/base.css \
	media/admin/img/admin/inline-restore.png \
	media/admin/img/admin/nav-bg-reverse.gif \
	media/admin/img/admin/inline-splitter-bg.gif \
	media/admin/img/admin/changelist-bg.gif \
	media/admin/img/admin/nav-bg-grabber.gif \
	media/admin/img/admin/icon-yes.gif \
	media/admin/img/admin/default-bg-reverse.gif \
	media/admin/img/admin/icon_success.gif \
	media/admin/img/admin/icon_addlink.gif \
	media/admin/img/admin/selector-add.gif \
	media/admin/img/admin/icon_calendar.gif \
	media/admin/img/admin/tooltag-arrowright.gif \
	media/admin/img/admin/icon_error.gif \
	media/admin/img/admin/inline-delete-8bit.png \
	media/admin/img/admin/selector-remove.gif \
	media/admin/img/admin/tooltag-arrowright_over.gif \
	media/admin/img/admin/arrow-up.gif \
	media/admin/img/admin/tool-right.gif \
	media/admin/img/admin/selector-removeall.gif \
	media/admin/img/admin/icon-unknown.gif \
	media/admin/img/admin/icon_alert.gif \
	media/admin/img/admin/inline-restore-8bit.png \
	media/admin/img/admin/selector_stacked-remove.gif \
	media/admin/img/admin/inline-delete.png \
	media/admin/img/admin/arrow-down.gif \
	media/admin/img/admin/selector-search.gif \
	media/admin/img/admin/chooser-bg.gif \
	media/admin/img/admin/nav-bg.gif \
	media/admin/img/admin/tool-right_over.gif \
	media/admin/img/admin/icon-no.gif \
	media/admin/img/admin/icon_deletelink.gif \
	media/admin/img/admin/deleted-overlay.gif \
	media/admin/img/admin/icon_clock.gif \
	media/admin/img/admin/tooltag-add.gif \
	media/admin/img/admin/icon_searchbox.png \
	media/admin/img/admin/tool-left.gif \
	media/admin/img/admin/icon_changelink.gif \
	media/admin/img/admin/tool-left_over.gif \
	media/admin/img/admin/chooser_stacked-bg.gif \
	media/admin/img/admin/selector_stacked-add.gif \
	media/admin/img/admin/selector-addall.gif \
	media/admin/img/admin/tooltag-add_over.gif \
	media/admin/img/admin/default-bg.gif \
	media/yui-ext/yui-ext.js \
	media/yui-ext/yui-ext-core.js \
	errordocs/500.html

install-data-local:
	mkdir -p -m 1777 ${DESTDIR}${rbdir}/media/uploaded/images

EXTRA_DIST = $(nobase_rb_DATA)
