rbdir = $(pyexecdir)/reviewboard/reviews
nobase_rb_PYTHON = \
	__init__.py \
	datagrids.py \
	email.py \
	feeds.py \
	forms.py \
	models.py \
	tests.py \
	urls.py \
	views.py \
	templatetags/__init__.py \
	templatetags/emailtags.py \
	templatetags/reviewtags.py

nobase_rb_DATA = \
	fixtures/test_reviewrequests.json

EXTRA_DIST = $(nobase_rb_DATA)
