rbdir = $(pyexecdir)/reviewboard/reviews
nobase_rb_PYTHON = \
	__init__.py \
	datagrids.py \
	decorators.py \
	email.py \
	feeds.py \
	forms.py \
	models.py \
	tests.py \
	urls.py \
	views.py \
	management/__init__.py \
	management/commands/__init__.py \
	management/commands/fixscreenshots.py \
	management/commands/index.py \
	templatetags/__init__.py \
	templatetags/reviewtags.py

nobase_rb_DATA = \
	fixtures/test_reviewrequests.json

EXTRA_DIST = $(nobase_rb_DATA)
